Use Checktyle also for the test classes, fix checkstyle failures.